--- a/kr.css
+++ b/kr.css
@@ -1,3 +1,27 @@
+.d3-context-menu {
+	position: absolute;
+	display: none;
+	background-color: #f2f2f2;
+	border-radius: 4px;
+	font-family: Arial, sans-serif;
+	font-size: 14px;
+	min-width: 150px;
+	border: 1px solid #d4d4d4;
+	z-index:1200;
+}
+.d3-context-menu ul {
+	list-style-type: none;
+	margin: 4px 0px;
+	padding: 0px;
+	cursor: default;
+}
+.d3-context-menu ul li {
+	padding: 4px 16px;
+}
+.d3-context-menu ul li:hover {
+	background-color: #4677f8;
+	color: #fefefe;
+}
 .nodeLabel{
   fill: #000;
   font-family: sans-serif;
@@ -6,7 +30,6 @@
   stroke: #000;
   stroke-width: 1.5px;
 }
-
 .node {
   cursor: move;
   stroke:#000;
@@ -19,7 +42,7 @@
 .node.selected {
   stroke:#f00;
 }
-.action{fill: #aaa;}
+.action{fill: #aaf;}
 	
 .agent{fill: #aaa;}
 	
@@ -28,4 +51,36 @@
 .attribute{fill: #ddd;}
 .flag{fill: #eee;}
   
+}
+svg {
+  height: 100%;
+  max-width: 100%;
+}
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+#main-container{
+	height: auto;
+    width: 100%;
+}
+#menu{
+  position: absolute;
+  top:0;
+  left: 0;
+  height: 4%;
+  max-width: 100%;
+  background: #ffe;
+}
+#graph{
+  position: absolute;
+  top:30;
+  height: 96%;
+  max-width: 100%;
+  bottom: 0;
+  left:0;
+  right:0;
+  background: #fff;
 }
