--- a/kr.css
+++ b/kr.css
@@ -9,7 +9,7 @@
 	border: 1px solid #d4d4d4;
 	z-index:1200;
 }
-.d3-context-menu ul { 
+.d3-context-menu ul {
 	list-style-type: none;
 	margin: 4px 0px;
 	padding: 0px;
@@ -26,7 +26,7 @@
   fill: #000;
   font-family: sans-serif;
 }
-.link {
+.links {
   stroke: #000;
   stroke-width: 1.5px;
 }
@@ -104,10 +104,11 @@ html, body {
   background: #fff;
 }
 .n_tooltip{
-  padding: 1px;
+  padding: 5px 15px;
+  margin: 3px 25px;
   border-radius: 25px;	
   vertical-align: top;	
-  text-align: center;
+  text-align: left;
   z-index: 10;
   background: #1496bb;
   top: 10px;
