value problem solved
finishing the v2 using BM

--- a/kr.css
+++ b/kr.css
@@ -43,6 +43,16 @@
   stroke: #000;
   stroke-width: 2.5px;
 }
+.influence{
+  stroke-width: 2.5px;
+}
+.influence.positive{
+	stroke:#ff0000;
+}
+.influence.negative{
+	stroke:#00cc00;
+}
+
 .parent {
   stroke: #009933;
   stroke-width: 2px;
