--- a/kr.css
+++ b/kr.css
@@ -78,6 +78,10 @@ circle.node {
 .node.selected {
   stroke:#f00;
 }
+.node.hilighted{
+	fill:#ffa31a;
+	stroke:#ffff00;
+}
 .node.selected_overlay{
 	stroke:#1496bb;
 }
@@ -166,4 +170,10 @@ html, body {
   left: 10px;
   position: absolute;
   height: 25px;
+}
+.att_tooltip{
+  fill: white;
+  stroke: black;
+  stroke-width: 1;
+  opacity: 0.85;
 }
