--- a/kr.css
+++ b/kr.css
@@ -209,6 +209,49 @@ svg{
 	height:100%;
 	min-height:100%;
 }
+.d3-context-menu {
+	position: absolute;
+	display: none;
+	background-color: #000000;
+	border-radius: 5px;
+	font-family: Capriola, Helvetica, sans-serif;
+	font-size: 14px;
+	min-width: 150px;
+	border: 1px solid #d4d4d4;
+	box-shadow: 5px 5px 5px #888888;
+	font-weight: bold;
+	z-index:1200;
+	color:rgb(251, 249, 200);
+}
+.d3-context-menu ul {
+	list-style-type: none;
+	margin: 4px 0px;
+	padding: 0px;
+	cursor: default;
+}
+.d3-context-menu ul li {
+	padding: 4px 16px;
+}
+.d3-context-menu ul li:hover {
+	border-radius: 3px;
+	background-color: #0f71ba;
+	color: #fefefe;
+}
+.d3-context-menu ul li > ul {
+	list-style-type: none;
+	margin: 4px 0px;
+	padding: 0px;
+	cursor: default;
+}
+.d3-context-menu ul li > ul li {
+	padding: 4px 16px;
+}
+.d3-context-menu ul li > ul li:hover { 
+    background-color: rgb(9, 67, 111);
+	color: #fefefe;
+	border-radius: 3px;
+}
+
 #tab_menu{}
 .tab_button{
 	
