--- a/kr.css
+++ b/kr.css
@@ -1,7 +1,21 @@
+ body{
+	display:flex;
+	padding:0px;
+	margin:0px;
+	font-family: Capriola, Helvetica, sans-serif;
+}
  form.inputMenu {
 	padding: 10px;
-    color: #4A22FF;
-    background:#99ccff;
+    background-color: #000000;
+	border-radius: 5px;
+	font-family: Capriola, Helvetica, sans-serif;
+	font-size: 14px;
+	min-width: 150px;
+	border: 1px solid #d4d4d4;
+	box-shadow: 5px 5px 5px #888888;
+	font-weight: bold;
+	z-index:1200;
+	color:rgb(251, 249, 200);
 }
 .lead {
     font-style: italic;
@@ -23,13 +37,16 @@ rect.selection {
 .d3-context-menu {
 	position: absolute;
 	display: none;
-	background-color: #f2f2f2;
-	border-radius: 4px;
-	font-family: Arial, sans-serif;
+	background-color: #000000;
+	border-radius: 5px;
+	font-family: Capriola, Helvetica, sans-serif;
 	font-size: 14px;
 	min-width: 150px;
 	border: 1px solid #d4d4d4;
+	box-shadow: 5px 5px 5px #888888;
+	font-weight: bold;
 	z-index:1200;
+	color:rgb(251, 249, 200);
 }
 .d3-context-menu ul {
 	list-style-type: none;
@@ -41,7 +58,8 @@ rect.selection {
 	padding: 4px 16px;
 }
 .d3-context-menu ul li:hover {
-	background-color: #4677f8;
+	border-radius: 3px;
+	background-color: #0f71ba;
 	color: #fefefe;
 }
 .d3-context-menu ul li > ul {
@@ -54,8 +72,9 @@ rect.selection {
 	padding: 4px 16px;
 }
 .d3-context-menu ul li > ul li:hover { 
-    background-color: #4677f8;
+    background-color: rgb(9, 67, 111);
 	color: #fefefe;
+	border-radius: 3px;
 }
 .nodeLabel{
   fill: #000;
@@ -162,34 +181,53 @@ svg {
   height: 100%;
   max-width: 100%;
 }
-html, body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
 #main-container{
-	height: auto;
-    width: 100%;
+	width:100vw;
+	height:100vh;
+	background-color:#fffeec;
 }
 #menu{
-  position: absolute;
-  top:0;
-  left: 0;
-  height: 4%;
-  max-width: 100%;
-  background: #ffe;
+  height:4.5%;
+	max-height:40px;
+	min-height:37px;
+	width:100%;
+	border-top-right-radius:10px;
+	background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(76,76,76,1) 2%, rgba(102,102,102,1) 16%, rgba(71,71,71,1) 31%, rgba(19,19,19,1) 86%, rgba(19,19,19,1) 100%);
 }
+#menu_f{
+	height:100%;
+	width:100%;
+}
+#bottom_top_chart{
+	width:100%;
+	height:0.6%;
+	max-height:5px;
+	border-bottom-right-radius:5px;
+	border-bottom-left-radius:5px;
+	background:linear-gradient(to bottom, #3fa4f0 0%, #0f71ba 100%);
+}
+
 #graph{
-  position: absolute;
-  top:30;
-  height: 96%;
-  max-width: 100%;
-  bottom: 0;
-  left:0;
-  right:0;
-  background: #fff;
+  width:100%;
+	height:94.9%;
+	max-height:calc(100%-45px);
+	overflow:hidden;
+	background-color: #fffeec;
 }
+.tab_el{
+	bottom:0px;
+	float:left;
+	width:150px;
+	height:100%;
+	font-size:100%;
+	border-top-right-radius:5px;
+	border-top-left-radius:5px;
+	text-align:center;
+	font-weight: bold;
+	color:rgb(251, 249, 200);
+	font-family: Capriola, Helvetica, sans-serif;
+}
+
 .n_tooltip{
   padding: 5px 15px;
   margin: 3px 25px;
