--- a/kr.css
+++ b/kr.css
@@ -220,6 +220,7 @@ svg {
 	width:150px;
 	height:100%;
 	font-size:100%;
+	border:none;
 	border-top-right-radius:5px;
 	border-top-left-radius:5px;
 	text-align:center;
@@ -227,23 +228,85 @@ svg {
 	color:rgb(251, 249, 200);
 	font-family: Capriola, Helvetica, sans-serif;
 }
+#replay{
+	float:right;
+	margin-top:7px;
+	margin-right:30px;
+	border:2px solid #0f71ba;
+	border-radius:5px;
+	text-align:center;
+	font-weight: bold;
+	color:rgb(251, 249, 200);
+	font-family: Capriola, Helvetica, sans-serif;
+	font-size:100%;
+	background:linear-gradient(to bottom, #3fa4f0 0%, #0f71ba 100%);
+}
+#import{
+	float:left;
+	margin-top:7px;
+	border:2px solid #0f71ba;
+	border-radius:5px;
+	text-align:center;
+	font-weight: bold;
+	color:rgb(251, 249, 200);
+	font-family: Capriola, Helvetica, sans-serif;
+	font-size:100%;
+	background:linear-gradient(to bottom, #3fa4f0 0%, #0f71ba 100%);
+}
+#export{
+	float:left;
+	margin-top:7px;
+	margin-right:50px;
+	border:2px solid #0f71ba;
+	border-radius:5px;
+	text-align:center;
+	font-weight: bold;
+	color:rgb(251, 249, 200);
+	font-family: Capriola, Helvetica, sans-serif;
+	font-size:100%;
+	background:linear-gradient(to bottom, #3fa4f0 0%, #0f71ba 100%);
+}
+#import_f{
+	float:left;
+	margin-left:15px;
+	border:2px solid #0f71ba;
+	border-radius:5px;
+	color:rgb(251, 249, 200);
+	font-family: Capriola, Helvetica, sans-serif;
+	font-size:100%;
+	height:30px;
+	margin-top:3px;
+}
+#kappa{
+	float:left;
+	margin-top:7px;
+	margin-left:30px;
+	border:2px solid rgba(214,128,138,1);
+	border-radius:5px;
+	text-align:center;
+	font-weight: bold;
+	color:rgb(251, 249, 200);
+	font-family: Capriola, Helvetica, sans-serif;
+	font-size:100%;
+	background: linear-gradient(to bottom, rgba(181,148,153,1) 0%, rgba(161,58,70,1) 18%, rgba(179,39,56,1) 91%, rgba(214,128,138,1) 100%);
+}
 
 .n_tooltip{
-  padding: 5px 15px;
-  margin: 3px 25px;
-  border-radius: 25px;	
-  vertical-align: top;	
+background-color:#fffeec;
+	position:absolute;
+	bottom:20px;
+	left:10px;
+	border:4px solid #0f71ba;
+	border-radius:10px;
+	box-shadow: 3px 3px 3px #888888;
+	z-index: 100;
+	display: block;
   text-align: left;
-  z-index: 10;
-  background: #1496bb;
-  top: 10px;
-  left: 10px;
-  color: #fff;
-  display: block;
-  position: absolute;
+  vertical-align: top;
   width: 150px;
   overflow : hidden;
 }
+
 .s_tooltip{
   bottom: 20px;
   left: 10px;
