--- a/kr.css
+++ b/kr.css
@@ -189,7 +189,6 @@ svg {
 #menu{
   height:4.5%;
 	max-height:40px;
-	min-height:37px;
 	width:100%;
 	border-top-right-radius:10px;
 	background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(76,76,76,1) 2%, rgba(102,102,102,1) 16%, rgba(71,71,71,1) 31%, rgba(19,19,19,1) 86%, rgba(19,19,19,1) 100%);
@@ -217,7 +216,7 @@ svg {
 .tab_el{
 	bottom:0px;
 	float:left;
-	width:150px;
+	width:7.8%;
 	height:100%;
 	font-size:100%;
 	border:none;
@@ -228,10 +227,14 @@ svg {
 	color:rgb(251, 249, 200);
 	font-family: Capriola, Helvetica, sans-serif;
 }
+#kr{
+	margin-left:4%;
+}
 #replay{
+	top:0;
 	float:right;
-	margin-top:7px;
-	margin-right:30px;
+	margin-right:0.3%;
+	height:90%;
 	border:2px solid #0f71ba;
 	border-radius:5px;
 	text-align:center;
@@ -243,7 +246,9 @@ svg {
 }
 #import{
 	float:left;
-	margin-top:7px;
+	margin-top:3%;
+	margin-bottom:3%;
+	height:90%;
 	border:2px solid #0f71ba;
 	border-radius:5px;
 	text-align:center;
@@ -254,8 +259,10 @@ svg {
 	background:linear-gradient(to bottom, #3fa4f0 0%, #0f71ba 100%);
 }
 #export{
-	float:left;
-	margin-top:7px;
+	float:right;
+	margin-top:3%;
+	margin-bottom:3%;
+	height:90%;
 	margin-right:50px;
 	border:2px solid #0f71ba;
 	border-radius:5px;
@@ -274,13 +281,15 @@ svg {
 	color:rgb(251, 249, 200);
 	font-family: Capriola, Helvetica, sans-serif;
 	font-size:100%;
-	height:30px;
+	height:80%;
 	margin-top:3px;
 }
 #kappa{
 	float:left;
-	margin-top:7px;
-	margin-left:30px;
+	margin-top:5%;
+	margin-bottom:5%;
+	height:82%;
+	margin-left:5%x;
 	border:2px solid rgba(214,128,138,1);
 	border-radius:5px;
 	text-align:center;
