--- a/kr.css
+++ b/kr.css
@@ -1,3 +1,25 @@
+@media all and (min-width: 50px)   {  body  { font-size:0.33em;  } }
+@media all and (min-width: 100px)  {  body  { font-size:0.36em;  } }
+@media all and (min-width: 200px)  {  body  { font-size:0.40em;  } }
+@media all and (min-width: 300px)  {  body  { font-size:0.43em;  } }
+@media all and (min-width: 400px)  {  body  { font-size:0.46em;  } }
+@media all and (min-width: 500px)  {  body  { font-size:0.5em;  } }
+@media all and (min-width: 600px)  {  body  { font-size:0.53em;  } }
+@media all and (min-width: 700px)  {  body  { font-size:0.56em;  } }
+@media all and (min-width: 800px)  {  body  { font-size:0.60em;  } }
+@media all and (min-width: 900px)  {  body  { font-size:0.63em;  } }
+@media all and (min-width: 1000px) {  body  { font-size:0.66em;  } }
+@media all and (min-width: 1100px) {  body  { font-size:0.70em;  } }
+@media all and (min-width: 1200px) {  body  { font-size:0.73em;  } }
+@media all and (min-width: 1300px) {  body  { font-size:0.76em;  } }
+@media all and (min-width: 1400px) {  body  { font-size:0.80em;  } }
+@media all and (min-width: 1500px) {  body  { font-size:0.83em;  } }
+@media all and (min-width: 1500px) {  body  { font-size:0.86em;  } }
+@media all and (min-width: 1600px) {  body  { font-size:0.90em;  } }
+@media all and (min-width: 1700px) {  body  { font-size:0.93em;  } }
+@media all and (min-width: 1800px) {  body  { font-size:0.96em;  } }
+@media all and (min-width: 1900px) {  body  { font-size:1em;  } }
+@media all and (min-width: 2000px) {  body  { font-size:1.03em;  } }
 body{
 	display:flex;
 	padding:0px;
@@ -12,7 +34,6 @@ body{
 #top_chart{
 	height:4.5%;
 	max-height:40px;
-	min-height:37px;
 	width:100%;
 	border-top-right-radius:10px;
 	background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(76,76,76,1) 2%, rgba(102,102,102,1) 16%, rgba(71,71,71,1) 31%, rgba(19,19,19,1) 86%, rgba(19,19,19,1) 100%);
@@ -35,8 +56,8 @@ body{
 	background-color:#fffeec;
 	float:left;
 	position:absolute;
-	bottom:10px;
-	left:10px;
+	bottom:0.92%;
+	left:0.45%;
 	border:4px solid #0f71ba;
 	border-radius:10px;
 	width:27%;
@@ -48,13 +69,11 @@ body{
 	display: block;
 }
 #side_menu{
-	margin-top:2px;
     height: 100%;
     width: 0;
 	min-width:0;
     position: fixed;
     z-index: 1;
-    top: 45px;
     left: 0;
     overflow-x: hidden;
     transition: 0.5s;
@@ -63,11 +82,9 @@ body{
 }
 .close_side_menu{
 	position:absolute;
-	width:20px;
-	height:20px;
 	float:right;
-	top:-5px;
-	right:15px;
+	top:0.7%;
+	right:3%;
 	color:#0f71ba;
 	font-size:200%;
 }
