--- a/kr.css
+++ b/kr.css
@@ -32,7 +32,7 @@ body{
 	background-color:#fffeec;
 }
 #top_chart{
-	height:4.5%;
+	height:4.5rem;
 	max-height:40px;
 	width:100%;
 	border-top-right-radius:10px;
@@ -40,7 +40,7 @@ body{
 }
 .bottom_top_chart{
 	width:100%;
-	height:0.6%;
+	height:0.6rem;
 	max-height:5px;
 	border-bottom-right-radius:5px;
 	border-bottom-left-radius:5px;
@@ -84,28 +84,24 @@ body{
 	position:absolute;
 	float:right;
 	top:0.7%;
-	right:3%;
+	right:2%;
 	color:#0f71ba;
 	font-size:200%;
 }
 .save{
 	position:absolute;
-	width:25px;
-	height:25px;
 	float:left;
 	top:0px;
-	left:5px;
+	left:1%;
 	color:#0f71ba;
 	font-size:200%;
 	text-align:center;
 }
 .discard{
 	position:absolute;
-	width:25px;
-	height:25px;
 	float:right;
-	bottom:25px;
-	right:2px;
+	bottom:1%;
+	right:0.1%;
 	color:rgb(204, 0, 0);
 	font-size:250%;
 	text-align:center;
@@ -114,12 +110,12 @@ body{
 	float:left;
 	left:0;
 	height:100%;
-	width:15px;
+	width:0.78%;
+	max-width:15px;
 }
 #drag_bar{
 	border-top-right-radius: 15px;
 	position:relative;
-	top:2px;
 	width:100%;
 	height:100%;
 	background: linear-gradient(to right,  #000000 0%,#000000 38%,#686868 45%,#000000 53%,#686868 61%,#000000 68%,#686868 75%,#000000 82%,#0052aa 89%,#f7f7f7 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
@@ -131,27 +127,30 @@ body{
 }
 .top_menu{
 	float:left;
-	margin-left:10px;
-	margin-top:5px;
+	margin-left:0.52rem;
+	margin-top:0.3rem;
 	height:100%;
+	overflow:hidden;
 }
 #search{
-	position:absolute;
-	right:10px;
-	margin-top:5px;
-    font-size: 16px;
-	width: 250px;
-	height: 30px;
+	/*! position:absolute; */
+	/*! right:0.52rem; */
+	margin-top:0.2%;
+    font-size: 110%;
+	width: 12rem;
+	height: 85%;
 	border-top: 4px solid #3fa4f0;
 	border-bottom: 4px solid #0f71ba;
-	border-radius:15px;
+	border-radius:1.05rem;
 	box-sizing: border-box;
 	background-position: 0 0, 100% 0;
 	background-repeat: no-repeat;
-	background-size: 20px 100%;
+	background-size: 1.6rem 100%;
 	background-image: linear-gradient(to bottom, #3fa4f0 0%, #0f71ba 100%), linear-gradient(to bottom, #3fa4f0 0%, #0f71ba 100%);
-	padding-left:25px;
-	padding-right:25px
+	padding-left:1.6rem;
+	padding-right:1.6rem;
+	float: right;
+	margin-right: 1.5rem;
 }
 .unselectable{
 	cursor:default;
@@ -166,9 +165,10 @@ body{
 .tab_menu_el{
 	bottom:0px;
 	float:left;
-	width:150px;
+	max-width:150px;
+	width:7.8rem;
 	height:100%;
-	font-size:100%;
+	font-size:1em;
 	border-top-right-radius:5px;
 	border-top-left-radius:5px;
 	text-align:center;
@@ -178,45 +178,48 @@ body{
 }
 .mod_menu{
 	float:left;
-	position:relative;
-	margin-left :7%;
+	/*! position:relative; */
+	margin-left :10rem;
 	height:100%;
 }
 .mod_el{
 	float:left;
-	padding-left:7px;
+	padding-left:0.36rem;
 }
 .undoredo{
-	width:25px;
 	height:100%;
-	font-size:150%;
-	text-align:top;
+	font-size:2em;
+	/*! text-align:top; */
 	font-weight: bold;
 	color:#0f71ba;
 	font-family: Capriola, Helvetica, sans-serif;
+	width: 2rem;
+}
+#export{
+	margin-left:2.6rem;
 }
 #import_f{
-	margin-left:50px;
 	border:2px solid #0f71ba;
 	border-radius:5px;
 	color:rgb(251, 249, 200);
 	font-family: Capriola, Helvetica, sans-serif;
-	font-size:100%;
-	height:30px;
-	margin-top:3px;
+	font-size:1em;
+	height:80%;
+	margin-top:0.3%;
+	width: 18rem;
 }
 .mod_div{
-	float:right;
-	margin-top:7px;
+	float:left;
+	margin-top:1.1%;
 	border:2px solid #0f71ba;
 	border-radius:5px;
 	text-align:center;
 	font-weight: bold;
 	color:rgb(251, 249, 200);
 	font-family: Capriola, Helvetica, sans-serif;
-	font-size:100%;
-	height:20px;
-	width:100px;
+	font-size:1em;
+	height:50%;
+	width:6rem;
 	background:linear-gradient(to bottom, #3fa4f0 0%, #0f71ba 100%);
 }
 svg{
@@ -274,11 +277,11 @@ svg{
 	height:calc(100%-45px);
 }
 .side_button{
-	width:170px;
+	width:40%;
 	background:linear-gradient(to bottom, #3fa4f0 0%, #0f71ba 100%);
 	border:2px solid #0f71ba;
 	border-radius:5px;
-	height:40px;
+	height:10%;
 }
 .side_el{
 	margin:auto;
@@ -292,16 +295,13 @@ svg{
 	top:0px;
 	width:100%;
 	text-align:center;
-	height:45px;
+	height:10%;
+	margin-top:5%;
 	font-weight: bold;
 	color:rgb(251, 249, 200);
 	font-family: Capriola, Helvetica, sans-serif;
-	font-size:100%;
+	font-size:200%;
 }
-
-
-
-
 
 
 .posInfl{
@@ -328,7 +328,7 @@ svg{
 	fill:#000000;
 }
 #tab_frame{
-	margin-left: 15px;
+	margin-left: 0.78%;
 }
 .input{
 	
@@ -394,5 +394,3 @@ svg{
 .g_tab{
 	
 }
- 
- 
